--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-black
-flake8
-ipython
-isort
-jupyterlab
-loguru
-matplotlib
-mkdocs
-notebook
-numpy
-pandas
-pip
-python-dotenv
-scikit-learn
-tqdm
-typer
--e .
+keras==3.6.0
+matplotlib==3.8.0
+numpy==2.1.3
+pandas==2.2.3
+recommenders==1.2.0
+scikit_learn==1.2.2
+scipy==1.11.4
+tensorflow==2.18.0
+tensorflow_intel==2.18.0
